--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ body {
 .anima1 {
 	background-image:url(../imgs/helicoptero.png);
 	animation:play .5s steps(2) infinite;
-
 	-webkit-animation: play .5s steps(2) infinite;
 	-moz-animation: play .5s steps(2) infinite;
 	-ms-animation: play .5s steps(2) infinite;
@@ -129,34 +128,34 @@ body {
 	background-image:url(../imgs/amigo.png);
 	animation:play2 .9s steps(12) infinite;
 	-webkit-animation: play2 .9s steps(12) infinite;
-       -moz-animation: play2 .9s steps(12) infinite;
-        -ms-animation: play2 .9s steps(12) infinite;
-         -o-animation: play2 .9s steps(12) infinite;
+    -moz-animation: play2 .9s steps(12) infinite;
+    -ms-animation: play2 .9s steps(12) infinite;
+        -o-animation: play2 .9s steps(12) infinite;
 }
 
 @keyframes play2 {
-	from {background-position:0px;}
-	to {background-position:-528px;}
+	from { background-position: 0px; }
+	to { background-position: -528px; }
 }
 
 @-webkit-keyframes play2 {
-   from { background-position:    0px; }
-     to { background-position: -528px; }
+	from { background-position: 0px; }
+	to { background-position: -528px; }
 }
 
 @-moz-keyframes play2 {
-   from { background-position:    0px; }
-     to { background-position: -528px; }
+	from { background-position: 0px; }
+	to { background-position: -528px; }
 }
 
 @-ms-keyframes play2 {
-   from { background-position:    0px; }
-     to { background-position: -528px; }
+	from { background-position: 0px; }
+	to { background-position: -528px; }
 }
 
 @-o-keyframes play2 {
-   from { background-position:    0px; }
-     to { background-position: -528px; }
+	from { background-position: 0px; }
+	to { background-position: -528px; }
 }
 
 #disparo {
@@ -173,7 +172,49 @@ body {
 }
 
 #explosao2 {
-	width:15px;
-	height:87px;
-	position:absolute;
+	width: 15px;
+	height: 87px;
+	position: absolute;
+}
+
+#explosao3 {
+	width: 44px;
+	height: 51px;
+	position: absolute;
+}
+
+.anima4 {
+	width:44px;
+	height:51px;
+	background-image:url(../imgs/amigo_morte.png);
+	animation:play3 .5s steps(7) infinite;
+	-webkit-animation: play3 .5s steps(7) infinite;
+    -moz-animation: play3 .5s steps(7) infinite;
+    -ms-animation: play3 .5s steps(7) infinite;
+    -o-animation: play3 .5s steps(7) infinite;
+}
+
+@keyframes play3 {
+	from { background-position: 0px; }
+	to { background-position: -308px; }
+}
+
+@-webkit-keyframes play3 {
+	from { background-position: 0px; }
+	to { background-position: -308px; }
+}
+
+@-moz-keyframes play3 {
+	from { background-position: 0px; }
+	to { background-position: -308px; }
+}
+
+@-ms-keyframes play3 {
+	from { background-position: 0px; }
+	to { background-position: -308px; }
+}
+
+@-o-keyframes play3 {
+	from { background-position: 0px; }
+	to { background-position: -308px; }								
 }
